# airflow-ansible-provider

./: .gitignore  CHANGELOG.md  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-publish.yml
docs/: user-guide.md
examples/: galaxy_community.docker-venv.py  galaxy_community.docker.py
examples/playbooks/: docker.pull.yml  ping.yml
src/airflow_ansible_provider/: __init__.py  compat.py  plugins.py
src/airflow_ansible_provider/decorators/: __init__.py  ansible_decorators.py  ansible_venv_decorators.py
src/airflow_ansible_provider/example_dags/: ping.py
src/airflow_ansible_provider/hooks/: ansible.py
src/airflow_ansible_provider/operators/: ansible_operator.py  venv_ansible_operator.py
